--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -9,7 +9,7 @@ jobs:
         - os: ubuntu-22.04
           platform: linux
           arch: x64
-        - os: ubuntu-22.04-arm64
+        - os: ubuntu-22.04
           platform: linux
           arch: arm64
         - os: ubuntu-22.04
@@ -24,7 +24,7 @@ jobs:
         - os: ubuntu-22.04
           platform: android
           arch: arm
-        - os: macos-12
+        - os: macos-14
           platform: darwin
           arch: x64
         - os: macos-14
