Install git, Clang, and LLD

--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -59,6 +59,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
+      - run: apt update && apt install -y git clang lld
+        if: ${{ matrix.platform == 'linux' }}
       - run: npm install -g bare-runtime bare-make
       - run: npm install
       - run: bare-make generate --platform ${{ matrix.platform }} --arch ${{ matrix.arch }} ${{ matrix.flags }}
